# wasmsnake

./: Cargo.toml  README.md  index.html
docs/: wasmsnake.js
pkg/: index.html  package.json  wasmsnake.d.ts  wasmsnake_bg.wasm  wasmsnake_bg.wasm.d.ts
src/: gameboard.rs  lib.rs
